# fairmaps

./: .gitignore  LICENSE  README.md  main.py  partition.py  pyproject.toml
